--- a/Laboratorio y programacion 1/Clases/Proyecto 5/Proyecto 5.cbp
+++ b/Laboratorio y programacion 1/Clases/Proyecto 5/Proyecto 5.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Proyecto 5 burbuja" />
+		<Option title="Proyecto 5" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Proyecto 5 burbuja" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Proyecto 5" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Proyecto 5 burbuja" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Proyecto 5" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,12 +31,18 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="getArrayInt.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="getArrayInt.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
 			<code_completion />
+			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
