--- a/Laboratorio y programacion 1/Clases/CLASE_07/CLASE_7.cbp
+++ b/Laboratorio y programacion 1/Clases/CLASE_07/CLASE_7.cbp
@@ -38,9 +38,14 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="utn.h" />
+		<Unit filename="utn_isValid.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="utn_isValid.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
